# wii-banner-renderer

./: CMakeLists.txt  README.md
.github/workflows/: windows.yml
include/: Animator.h  Banner.h  Endian.h  Font.h  Funcs.h  LZ77.h  Layout.h  Material.h  Pane.h  Picture.h  Renderer.h  Sound.h  Textbox.h  Texture.h  Types.h  Wad.h  Window.h  WrapGx.h
src/: Animator.cpp  Banner.cpp  Font.cpp  Layout.cpp  Main.cpp  Material.cpp  Pane.cpp  Renderer.cpp  Sound.cpp  Textbox.cpp  Texture.cpp  Wad.cpp  Window.cpp  WrapGx.cpp
src/old/: CDUtils.cpp  Common.h  CommonFuncs.h  CommonTypes.h  CompressedBlob.h  FileHandlerARC.cpp  FileHandlerARC.h  FileUtil.h  Filesystem.h  LookUpTables.h  TextureDecoder.cpp  Volume.h
